--- a/Features/Integrations.mdx
+++ b/Features/Integrations.mdx
@@ -17,15 +17,15 @@ description: 'Identity Service Providers and Native languages'
 
 ### Identity Provider Integration Instrcutions
   <AccordionGroup>
-      <Accordion href="/Tabs/auth0.mdx" title="Auth0">
+      <Accordion title="Auth0" href="/Tabs/auth0">
       </Accordion>
-      <Accordion href="/Tabs/MAAD.mdx" title="Microsoft Azure AD B2C">
+      <Accordion title="Microsoft Azure AD B2C" href="/Tabs/MAAD">
       </Accordion>
-      <Accordion href="/Tabs/MAADO365.mdx" title="Microsoft Azure AD and O365">
+      <Accordion title="Microsoft Azure AD and O365" href="/Tabs/MAADO365">
       </Accordion>
-      <Accordion href="/Tabs/AWSCog.mdx" title="AWS Cognito">
+      <Accordion title="AWS Cognito" href="/Tabs/AWSCog">
       </Accordion>
-      <Accordion href="/Tabs/AWSIAM.mdx" title="AWS IAM">
+      <Accordion title="AWS IAM" href="/Tabs/AWSIAM">
       </Accordion>
   </AccordionGroup>
 
@@ -38,6 +38,6 @@ For more information about integrations and examples of implementing them please
 
 Next, you will need to set up Next Level Cloud Identity JIT Access for the endpoints, users, and groups that are associated with your application(s).
 
-<Card title="Users, Groups, and Enpoints" href="/Features/Users, Groups, and Endpoints.mdx">
+<Card title="Users, Groups, and Enpoints" href="/Features/Users, Groups, and Endpoints">
   Endpoint, User, and Group Management
 </Card>
