--- a/Features/Users, Groups, and Endpoints.mdx
+++ b/Features/Users, Groups, and Endpoints.mdx
@@ -80,11 +80,11 @@ Clicking the "Return" option will cancel any pre-saving changes made to the grou
 
 ### Example of Group Creation/Management
 
-<img src="/images/Group Management/Group3.png" />
+<img src="/images/Group Management/Group3" />
 
 ## Protecting Endpoints
 <AccorionGroup>
-    <Accordion icon="/icons/windows.svg" title="Windows">
+    <Accordion title="Windows" icon="/icons/windows.svg">
 ## Windows
 
 ### Prerequisites
@@ -127,7 +127,7 @@ You will need:
     The following command can be entered to give designated users NextLevel3 MFA bypass privileges:
     <img src="/images/pam/pam8.png" />
     </Accordion>
-    <Accordion icon="/icons/linux.svg" title="Linux">
+    <Accordion title="Linux" icon="/icons/linux.svg">
 ## Linux
 
 ### Prerequisites
@@ -194,7 +194,7 @@ You will need:
     "GroupTry": [ "wheel", "staff" ]
     ```
     </Accordion>
-    <Accordion icon="/icons/apple.svg" title="MacOS">
+    <Accordion title="MacOS" icon="/icons/apple.svg">
     ## Apple... Coming soon!
     </Accordion>
 </AccordionGroup>
