--- a/Features/Integrations.mdx
+++ b/Features/Integrations.mdx
@@ -802,10 +802,11 @@ https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-get-started.html
       </Accordion>
   </AccordionGroup>
 
-## Native Language Support
+### Supported Native Language Integrations
 For more information about integrations and examples of implementing them please view the Native Language Support page:
-
-
+<Card title="Native Language Integrations" href="/Features/Native Language Integrations">
+Node JS, Python, and Microsoft .NET Framework
+</Card>
 
 ## Step 4. Managing Access for your Company Portal Applications
 
