--- a/Features/Applications and Signing Keys.mdx
+++ b/Features/Applications and Signing Keys.mdx
@@ -17,7 +17,7 @@ _*Please wait atleast 30 minutes before attempting to validate your application,
 ### Step 3. Setting up your Company Portal Identity Provider Integrations
 The next step in setting up applications to check lock statuses is to implement Identity Provider Integrations.
 
-<Card title="Identity Provider Integrations" href="/Features/Integrations">
+<Card title="Identity Provider Integrations" href="/Features/Identity Service Provider Integrations">
     Integrating Identity Service Providers and Next Level3 Native languages
 </Card>
 
