--- a/Features/Native Language Integrations.mdx
+++ b/Features/Native Language Integrations.mdx
@@ -1,3 +1,7 @@
+---
+title: 'Native Language Integrations'
+description: 'Node JS, Python, Microsoft .NET Framework'
+---
 ## Native Language Integrations
 
       Next Level3 Supports integration directly in multiple native languages. To integrate Cloud Identity JIT Access into your application, refer to the following examples.
@@ -326,3 +330,11 @@
         ```
       </Tab>
     </Tabs>
+
+## Step 4. Managing Access for your Company Portal Applications
+
+Next, you will need to set up Next Level Cloud Identity JIT Access for the endpoints, users, and groups that are associated with your application(s).
+
+<Card title="Users, Groups, and Enpoints" href="/Features/Users, Groups, and Endpoints">
+  Endpoint, User, and Group Management
+</Card>
