--- a/Features/Native Language Integrations.mdx
+++ b/Features/Native Language Integrations.mdx
@@ -6,8 +6,8 @@ description: 'Node JS, Python, Microsoft .NET Framework'
 
       Next Level3 Supports integration directly in multiple native languages. To integrate Cloud Identity JIT Access into your application, refer to the following examples.
 
-    <Tabs>
-      <Tab title="Node JS">
+    <AccordionGroup>
+      <Accordion title="Node JS">
         <img src="/images/nodejs/nodejs.png" />
         The Next Level3 Node.js integration is designed to be used for your existing applications or sites that are using native Node.js code for authentication. This integration will allow you to easily add Account Protection to any application that leverages Node.js for authentication. 
         Pre-requisites
@@ -109,8 +109,8 @@ description: 'Node JS, Python, Microsoft .NET Framework'
           }
         };
         ```
-      </Tab>
-      <Tab title="Python">
+      </Accordion>
+      <Accordion title="Python">
         <img src="/images/python/python.png" />
         ## Python Integration
         The Next Level3 Python integration is designed to be used for your existing applications or sites that are using Python for authentication. This integration will allow you to easily add Account Protection to any application that leverages Python for authentication. 
@@ -167,8 +167,8 @@ description: 'Node JS, Python, Microsoft .NET Framework'
 
           // Code for unlocked or unprotected accounts
         ```
-      </Tab>
-      <Tab title="Microsoft .NET Framework">
+      </Accordion>
+      <Accordion title="Microsoft .NET Framework">
         <img src="/images/net/net.jpg">
         ## .NET Integration
         The following example shows how it’s possible to perform a PreAuthentication Check with Next Level3 to determine lock status and initiate MFA Push based unlocking. If the status is locked, then a push unlock request is sent to the user’s registered devices.
@@ -328,8 +328,8 @@ description: 'Node JS, Python, Microsoft .NET Framework'
             }
         }
         ```
-      </Tab>
-    </Tabs>
+      </Accordion>
+    </AccordionGroup>
 
 ## Step 4. Managing Access for your Company Portal Applications
 
