--- a/Features/Native Language Integrations.mdx
+++ b/Features/Native Language Integrations.mdx
@@ -172,7 +172,7 @@ description: 'Node JS, Python, Microsoft .NET Framework'
 ```
       </Accordion>
       <Accordion title="Microsoft .NET Framework">
-        <img src="/images/net/net.jpg">
+        <img src="/images/net/net.jpg" />
         ## .NET Integration
         The following example shows how it’s possible to perform a PreAuthentication Check with Next Level3 to determine lock status and initiate MFA Push based unlocking. If the status is locked, then a push unlock request is sent to the user’s registered devices.
 
