--- a/Features/Users, Groups, and Endpoints.mdx
+++ b/Features/Users, Groups, and Endpoints.mdx
@@ -22,12 +22,12 @@ The "Actions" button in the top right corner, allows administrators to add users
 After a user has been added they will have the following account set up options:
 
 <CardGroup>
-    </Card title="Desktop Browser" 
+    <Card title="Desktop Browser" 
     href="/Desktop User Guide" 
     icon="/icons/desktop-solid">
     Signing into the Company Portal using a web browser.
     </Card>
-    </Card title="Mobile Device Application"
+    <Card title="Mobile Device Application"
     href="/Mobile User Guide"
     icon="/icons/mobile-screen-button-solid">
     Signing into the company portal using the Next Level3 Mobile app.
@@ -127,7 +127,7 @@ You will need:
     The following command can be entered to give designated users NextLevel3 MFA bypass privileges:
     <img src="/images/pam/pam8.png" />
     </Accordion>
-    <Accordion title="Linux" icon="/icons/linux.svg">
+    <Accordion title="Linux" icon="/icons/linux">
 ## Linux
 
 ### Prerequisites
@@ -194,7 +194,7 @@ You will need:
     "GroupTry": [ "wheel", "staff" ]
 ```
     </Accordion>
-    <Accordion title="MacOS" icon="/icons/apple.svg">
+    <Accordion title="MacOS" icon="/icons/apple">
     ## Apple... Coming soon!
     </Accordion>
 </AccordionGroup>
